test/bad/sec_six_params.subst
{"functions":[{"paramSecrecy":[false,false,false,false,false,false],"returnSecrecy":[],"trusted":false},{"paramSecrecy":[false,false,false,false,false,false],"returnSecrecy":[],"trusted":false}],"globalsOffset":80,"globalsSecrecy":[],"memories":[{"imported":true,"secret":false}],"memoriesOffset":36}
{"functions":[{"paramSecrecy":[true,false,true,true,false,false],"returnSecrecy":[],"trusted":false},{"paramSecrecy":[false,false,false,false,false,false],"returnSecrecy":[],"trusted":false}],"globalsOffset":80,"globalsSecrecy":[],"memories":[{"imported":true,"secret":false}],"memoriesOffset":36}   